# web

./: .gitignore  BUILD.bazel  Makefile  README.md  deps.bzl  go.mod  go.sum  gqlgen.yml  graphql.Dockerfile  graphql.docker-compose.yaml  meta.docker-compose.yaml  models_gen.go
client/: BUILD.bazel  request.go
cmd/graphql/: BUILD.bazel  main.go  server.go
coinbase/: BUILD.bazel  api.go  async_ticker.go  async_ticker_test.go  client.go  endpoint.go  mock_c.go  websocket.go
docs/: development.md  protomodel.md  scalar.md
env/: BUILD.bazel
examples/coinbase/api/: .env  BUILD.bazel  main.go
examples/coinbase/websocket/: BUILD.bazel  main.go
graph/: BUILD.bazel  schema.resolvers.go
iex/: BUILD.bazel  api.go  client.go  endpoint.go
internal/: BUILD.bazel  http.go
internal/client/: BUILD.bazel  assigner.go  body.go  client.go  error_message.go  errors.go  log.go  method.go  parent.go  request.go
internal/env/: BUILD.bazel  env.go
internal/graph/: BUILD.bazel  schema.resolvers.go
internal/graph/schema/: coinbase_account_deposit_options.graphqls  coinbase_account_hold.graphqls  coinbase_account_holds_options.graphqls  coinbase_account_ledger.graphqls  coinbase_account_ledger_options.graphqls  coinbase_account_transfer.graphqls  coinbase_account_transfers_options.graphqls  coinbase_account_withdrawal_options.graphqls  coinbase_bank_country.graphqls  coinbase_conversion_options.graphqls  coinbase_conversions_options.graphqls  coinbase_crypto_account.graphqls  coinbase_crypto_address.graphqls  coinbase_crypto_withdrawal_options.graphqls  coinbase_currency.graphqls  coinbase_currency_conversion.graphqls  coinbase_currency_details.graphqls  coinbase_deposit.graphqls  coinbase_fills_options.graphqls  coinbase_new_order_options.graphqls  coinbase_orders_options.graphqls  coinbase_payment_method_deposit_options.graphqls  coinbase_payment_method_withdrawal_options.graphqls  coinbase_product.graphqls  coinbase_product_ticker.graphqls  coinbase_products_options.graphqls  coinbase_sepa_deposit_information.graphqls  coinbase_swift_deposit_information.graphqls  coinbase_wallet.graphqls  coinbase_websocket_ticker.graphqls  coinbase_withdrawal.graphqls  coinbase_withdrawal_fee_estimate.graphqls  coinbase_withdrawal_fee_estimate_options.graphqls  iex_rule.graphqls  iex_rules_schema.graphqls  iex_rules_scheme.graphqls  kraken_system_status.graphqls  kraken_system_status_result.graphqls  opensea_asset.graphqls  opensea_asset_contract.graphqls  (+4 more)
internal/integration/: BUILD.bazel  coinbase_helpers.go  coinbase_test.go  test_case.go
internal/integration/testdata/: coinbase_account_ledgers.json  coinbase_accounts.json
internal/oauth1/: BUILD.bazel  auther.go  config.go  encode_test.go  noncer.go  signer.go  transport.go
kraken/: BUILD.bazel  api.go  client.go  endpoint.go
meta/: generate.Dockerfile  goimports.Dockerfile  graph_schema.rb  model.rb  protomodel.rb
model/: BUILD.bazel  coinbase_account.go  coinbase_account_hold.go  coinbase_account_ledger.go  coinbase_account_ledger_details.go  coinbase_account_transfer.go  coinbase_account_transfer_details.go  coinbase_available_balance.go  coinbase_balance.go  coinbase_bank_country.go  coinbase_crypto_account.go  coinbase_crypto_address.go  coinbase_crypto_address_info.go  coinbase_crypto_address_warning.go  coinbase_currency.go  coinbase_currency_conversion.go  coinbase_currency_details.go  coinbase_deposit.go  coinbase_fees.go  coinbase_fiat_account.go  coinbase_fill.go  coinbase_limits.go  coinbase_new_order.go  coinbase_order.go  coinbase_payment_method.go  coinbase_picker_data.go  coinbase_recurring_options.go  coinbase_sepa_deposit_information.go  coinbase_single_product.go  coinbase_swift_deposit_information.go  coinbase_uk_deposit_information.go  coinbase_wallet.go  coinbase_websocket_ticker.go  coinbase_wire_deposit_information.go  coinbase_withdrawal.go  coinbase_withdrawal_fee_estimate.go  graph_models_gen.go  iex_rule.go  iex_rules_schema.go  iex_rules_scheme.go  (+12 more)
opensea/: BUILD.bazel  api.go  client.go  endpoint.go
pkg/coinbase/: .simple-test.env  BUILD.bazel  README.md  api.go  async_ticker.go  async_ticker_test.go  client.go  const.go  endpoint.go  example_test.go  helpers_test.go  http.go  integration_test.go  mock_c.go  models.go  options.go  post_authority.go  websocket.go
pkg/coinbasepro/: BUILD.bazel  README.md  async_ticker.go  async_ticker_test.go  client.go  example_test.go  http.go  integration_test.go  models.go  options.go  path.go  post_authority.go  ratelimiter.go  ratelimiter_prototype.go  stress_test.go  types.go  websocket.go
pkg/iex/: BUILD.bazel  api.go  client.go  endpoint.go
pkg/kraken/: BUILD.bazel  api.go  client.go  endpoint.go
pkg/morningstar/: BUILD.bazel  models.go
pkg/opensea/: BUILD.bazel  api.go  client.go  endpoint.go
pkg/option/: BUILD.bazel  coinbase_account_deposit.go  coinbase_account_holds.go  coinbase_account_holds_options.go  coinbase_account_ledger.go  coinbase_account_transfers.go  coinbase_account_transfers_options.go  coinbase_account_withdrawal.go  coinbase_conversion.go  coinbase_conversions.go  coinbase_crypto_withdrawal.go  coinbase_fills.go  coinbase_new_order.go  coinbase_new_order_options.go  coinbase_orders.go  coinbase_payment_method_deposit.go  coinbase_payment_method_withdrawal.go  coinbase_payment_method_withdrawal_options.go  coinbase_products.go  coinbase_profiles.go  coinbase_withdrawal_fee_estimate.go  opensea_assets.go
pkg/polygon/: .test.env  BUILD.bazel  client.go  example_test.go  http.go  models.go  path.go  ratelimiter.go  types.go
pkg/twitter/: .gitignore  BUILD.bazel  README.md  client.go  example_test.go  http.go  models.go  options.go  path.go  post_authority.go  ratelimiter.go  transport_auth1.go  transport_auth2.go  types.go
protomodel/: BUILD.bazel  coinbase_account.go  coinbase_account_hold.go  coinbase_account_ledger.go  coinbase_account_ledger_details.go  coinbase_account_transfer.go  coinbase_account_transfer_details.go  coinbase_available_balance.go  coinbase_balance.go  coinbase_bank_country.go  coinbase_currency.go  (+40 more)
(+284 files in other folders)
