load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/alpine-hodler/sdk

gazelle(name = "gazelle")

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
)

go_library(
    name = "sdk",
    srcs = ["models_gen.go"],
    importpath = "github.com/alpine-hodler/sdk",
    visibility = ["//visibility:public"],
    deps = ["//scalar"],
)
