load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "graphql",
    srcs = [
        "main.go",
        "server.go",
    ],
    importpath = "github.com/alpine-hodler/sdk/cmd/graphql",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/graph",
        "//internal/graph/generated",
        "@com_github_99designs_gqlgen//graphql/handler",
        "@com_github_99designs_gqlgen//graphql/playground",
        "@com_github_sirupsen_logrus//:logrus",
        "@com_github_spf13_cobra//:cobra",
    ],
)
