load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "client",
    srcs = [
        "assigner.go",
        "body.go",
        "body_type.go",
        "client.go",
        "error_message.go",
        "errors.go",
        "log.go",
        "method.go",
        "parent.go",
        "request.go",
    ],
    importpath = "github.com/alpine-hodler/sdk/internal/client",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/log",
        "//tools",
    ],
)
