load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "env",
    srcs = ["env.go"],
    importpath = "github.com/alpine-hodler/sdk/internal/env",
    visibility = ["//visibility:public"],
    deps = ["@com_github_joho_godotenv//:godotenv"],
)

go_test(
    name = "env_test",
    timeout = "short",
    srcs = ["env_test.go"],
    embed = [":env"],
    deps = ["@com_github_franela_goblin//:goblin"],
)
