load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "graph",
    srcs = [
        "resolver.go",
        "schema.resolvers.go",
    ],
    importpath = "github.com/alpine-hodler/sdk/internal/graph",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/graph/generated",
        "//pkg/coinbase",
        "//pkg/iex",
        "//pkg/kraken",
        "//pkg/model",
        "//pkg/opensea",
    ],
)
