load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

# gazelle:exclude data

go_library(
    name = "integration",
    srcs = ["test_case.go"],
    importpath = "github.com/alpine-hodler/sdk/internal/integration",
    visibility = ["//:__subpackages__"],
    deps = ["@com_github_stretchr_testify//require"],
)

go_test(
    name = "integration_test",
    timeout = "short",
    srcs = ["coinbase_test.go"],
    data = glob(["testdata/**"]),
    embed = [":integration"],
    deps = [
        "//internal/env",
        "//pkg/coinbase",
        "//pkg/model",
        "@com_github_stretchr_testify//require",
    ],
)
