load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "oauth1",
    srcs = [
        "author.go",
        "encode.go",
        "signer.go",
    ],
    importpath = "github.com/alpine-hodler/sdk/internal/oauth1",
    visibility = ["//visibility:public"],
)

go_test(
    name = "oauth1_test",
    srcs = ["oauth1_test.go"],
    embed = [":oauth1"],
    deps = ["@com_github_stretchr_testify//require"],
)
