load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "coinbase",
    srcs = [
        "async_ticker.go",
        "client.go",
        "const.go",
        "endpoint.go",
        "websocket.go",
    ],
    importpath = "github.com/alpine-hodler/sdk/pkg/coinbase",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/client",
        "//internal/env",
        "//pkg/model",
        "//pkg/option",
        "//pkg/websocket",
        "//tools",
        "@com_github_sirupsen_logrus//:logrus",
        "@org_golang_x_sync//errgroup",
    ],
)

go_test(
    name = "coinbase_test",
    timeout = "short",
    srcs = [
        "async_ticker_test.go",
        "helpers_test.go",
        "integration_test.go",
    ],
    data = glob([".simple-test.env"]),
    embed = [":coinbase"],
    deps = [
        "//internal/env",
        "//pkg/model",
        "//pkg/option",
        "//pkg/websocket",
        "@com_github_franela_goblin//:goblin",
        "@com_github_sirupsen_logrus//:logrus",
        "@com_github_stretchr_testify//require",
    ],
)
