load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "coinbasepro",
    srcs = [
        "async_ticker.go",
        "client.go",
        "http.go",
        "models.go",
        "options.go",
        "path.go",
        "websocket.go",
    ],
    importpath = "github.com/alpine-hodler/web/pkg/coinbasepro",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/serial",
        "//pkg/scalar",
        "//pkg/transport",
        "//pkg/websocket",
        "//tools",
        "@org_golang_x_sync//errgroup",
    ],
)

go_test(
    name = "coinbasepro_test",
    timeout = "short",
    srcs = [
        "async_ticker_test.go",
        "example_test.go",
    ],
    data = glob([".simple-test.env"]),
    embed = [":coinbasepro"],
    deps = [
        "//pkg/scalar",
        "//pkg/transport",
        "//pkg/websocket",
        "//tools",
        "@com_github_joho_godotenv//:godotenv",
        "@com_github_stretchr_testify//require",
    ],
)
