load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "iex",
    srcs = [
        "api.go",
        "client.go",
        "endpoint.go",
    ],
    importpath = "github.com/alpine-hodler/sdk/pkg/iex",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/client",
        "//internal/env",
        "//internal/log",
        "//pkg/model",
    ],
)
