load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "morningstar",
    srcs = [
        "client.go",
        "http.go",
        "models.go",
        "options.go",
        "path.go",
        "ratelimiter.go",
    ],
    importpath = "github.com/alpine-hodler/web/pkg/morningstar",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/transport",
        "@org_golang_x_time//rate",
    ],
)

go_test(
    name = "morningstar_test",
    srcs = ["example_test.go"],
    deps = [
        ":morningstar",
        "//tools",
        "@com_github_joho_godotenv//:godotenv",
    ],
)
