load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "option",
    srcs = [
        "coinbase_account_deposit_options.go",
        "coinbase_account_holds_options.go",
        "coinbase_account_ledger_options.go",
        "coinbase_account_transfers_options.go",
        "coinbase_account_withdrawal_options.go",
        "coinbase_conversion_options.go",
        "coinbase_conversions_options.go",
        "coinbase_crypto_withdrawal_options.go",
        "coinbase_fills_options.go",
        "coinbase_new_order_options.go",
        "coinbase_orders_options.go",
        "coinbase_payment_method_deposit_options.go",
        "coinbase_payment_method_withdrawal_options.go",
        "coinbase_withdrawal_fee_estimate_options.go",
        "opensea_assets_options.go",
    ],
    importpath = "github.com/alpine-hodler/sdk/pkg/option",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/protomodel",
        "//pkg/scalar",
    ],
)
