load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "option",
    srcs = [
        "coinbase_account_deposit.go",
        "coinbase_account_holds.go",
        "coinbase_account_ledger.go",
        "coinbase_account_transfers.go",
        "coinbase_account_withdrawal.go",
        "coinbase_conversion.go",
        "coinbase_conversions.go",
        "coinbase_crypto_withdrawal.go",
        "coinbase_fills.go",
        "coinbase_new_order.go",
        "coinbase_orders.go",
        "coinbase_payment_method_deposit.go",
        "coinbase_payment_method_withdrawal.go",
        "coinbase_products.go",
        "coinbase_withdrawal_fee_estimate.go",
        "opensea_assets.go",
    ],
    importpath = "github.com/alpine-hodler/sdk/pkg/option",
    visibility = ["//visibility:public"],
    deps = ["//pkg/scalar"],
)
