load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "twitter",
    srcs = [
        "client.go",
        "http.go",
        "models.go",
        "options.go",
        "path.go",
        "types.go",
    ],
    importpath = "github.com/alpine-hodler/sdk/pkg/twitter",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/scalar",
        "//pkg/transport",
        "//tools",
    ],
)

go_test(
    name = "twitter_test",
    timeout = "short",
    srcs = ["example_test.go"],
    data = glob([
        ".simple-test.env",
        ".test.env",
        "refresh_token.json",
    ]),
    deps = [
        ":twitter",
        "//pkg/transport",
        "@com_github_joho_godotenv//:godotenv",
    ],
)
