load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "api_lib",
    srcs = ["main.go"],
    importpath = "github.com/alpine-hodler/sdk/examples/coinbase/api",
    visibility = ["//visibility:private"],
    deps = ["//pkg/coinbase"],
)

go_binary(
    name = "api",
    embed = [":api_lib"],
    visibility = ["//visibility:public"],
)
